src/static/styles/core.scss
/* ... */
.page.contact {
    font-size: 1.2em;

    .social-icon {
        max-height: 1em;
        vertical-align: baseline;
    }
}

.page.event {
    text-align: center;

    .date-time {
        color: #333;
        border-bottom: 1px solid #333;

        &:hover {
            border-bottom-style: dashed;
        }
    }

    h1 {
        font-size: 3em;
        margin-bottom: 0.5em;
    }

    .lead {
        margin-bottom: 2em;
        font-size: 1.1em;
    }

    .description img {
        display: block;
        max-width: 100%;
        margin: auto;
    }
}

.page.category {
    h1 {
        font-size: 3em;
    }

    h2 {
        margin-top: 0;
    }

    .event-list {
        display: inline-block;
        text-align: left;

        .btn {
            min-width: 200px;
        }

        .event {
            display: block;
            margin-bottom: 10px;
            border-radius: 10px 0px 30px 0px;
        }

        .lead {
            margin-bottom: .25em;
            font-size: 1.5em;
        }
    }
}

// Style for schedule page
.page.schedule {

    .cal-month-name {
        font-weight: 900;
        font-size: 1.8em;
        text-align: center;
    }

    .cal-table {
        text-align: center;
        border-collapse: separate;
        border-spacing: 6px;
        margin: auto;

        th {
            width: 2.8em;
            font-weight: 600;
        }

        td {
            vertical-align: middle;
            border-radius: 500;
            border: 3px solid #756a81;
            height: 2.5em;
            width: 2.5em;

            &.empty {
                border: 0;
            }

            &.has-event {
                background-color: #555;
                cursor: pointer;
                color: #fff;

                &:hover {
                    background-color: #aaa;
                    color: #333;
                }
            }
        }
    }

    .eventslist {
        margin:auto;

        td {
            position: relative;
            padding: .5em;
            vertical-align: middle;
        }

        .day {
            font-size: 1.3em;
            padding-right: 1em;
        }

        .hidden-day {
            visibility: hidden;
        }

        .event-container {
            border-left: .35em solid #333;
            padding-left: 0.95em;
        }

        .event {
            color:white;
            display: block;
            position: relative;
            background-color: #333;
            border-radius: 10px 0;
            width: 10em;
            padding: .5em;
        }

        .circle {
            position: absolute;
            top: 0;
            bottom: 0;
            margin: auto;
            left: -1.6em;
            background-color: #333;
            width: 1em;
            height: 1em;
            border-radius: .5em;
        }

        .innercircle {
            display: none;
            position: relative;
            top: .25em;
            left: .25em;
            width: .5em;
            height: .5em;
            border-radius: .25em;
        }

        .timeline:hover {
            .innercircle {
                display: block;
            }

            &:hover {
                .innercircle,
                .event {
                    background-color: #3c93b0;
                }
            }

            &.threads:hover {
                .innercircle,
                .event {
                    background-color: #3c93b0;
                }
            }
        }
    }
}

@keyframes float {
    0% {
        transform: translateY(3px);
    }

    50% {
        transform: translateY(-3px);
    }

    100% {
        transform: translateY(3px);
    }
}

@keyframes slide {
    0% {
        margin-bottom: 0;
        transform: scale(1) translateY(0);
    }

    100% {
        margin-bottom: 100vh;
        transform: scale(1) translateY(100%);
    }
}

@keyframes teleport {
    0% {
        margin-bottom: 100vh;
        transform: scale(1) translateY(100%);
    }

    49% {
        margin-bottom: 100vh;
        transform: scale(0) translateY(100%);
    }

    50% {
        margin-bottom: $nav-link-bottom-margin;
        transform: scale(0) translateY(100%);
    }

    51% {
        margin-bottom: $nav-link-bottom-margin;
        transform: scale(0) translateY(0);
    }

    100% {
        margin-bottom: $nav-link-bottom-margin;
        transform: scale(1) translateY(0);
    }
}

@keyframes glow {
    from {
        box-shadow: 0 0 1em #fff, 0 0 1em #fff, 0 0 2em #fff, 0 0 3em #fff, 0 0 1em #fff inset, 0 0 3em #fff inset;
    }

    50% {
        box-shadow: 0 0 1em #fff, 0 0 2em .5em #fff, 0 0 3em #fff, 0 0 4em #fff, 0 0 1em #fff inset, 0 0 3em #fff inset;
    }

    to {
        box-shadow: 0 0 1em #fff, 0 0 1em #fff, 0 0 2em #fff, 0 0 3em #fff, 0 0 1em #fff inset, 0 0 3em #fff inset;
    }
}

@keyframes appear {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

button,
input,
optgroup,
select,
textarea {
    color: #555;
}

.error,
.success {
    padding: .5em;
    border-radius: .3em;
    color: white;
}

.error {
    background: $red;
}

.success {
    background: $green;
}

.container-inline-block {
    display: inline-block;
}

.auth-quick-links {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 300;

    .nick {
        background-color: rgba(255, 255, 255, .7);
        border-radius: 0 0 0 10px;
        border-left: 1px solid;
        border-bottom: 1px solid;
        padding: .5em 1em;

        a {
            color: #1f8dd6;
            margin-left: 1em;

            &:hover {
                color: #055da0;
                border-bottom: 1px solid;
            }
        }
    }
}

.left-navbar {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 300;

    .btn {
        margin-left: 0em;
        margin-right: 0em;
    }
}
/* ... */

